--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js"></script>
 <script type="text/javascript">
-  rssToEmail = new RssToEmail({
+  rssToEmail = RssToEmail({
     "accentColor": "red",
     "header": {
       "banner": "https://dummyimage.com/660x200/1b3fd1/ffffff.png&text=Rss+to+Email+Sample",
